# WaveLabX

./: .gitignore  CITATION.cff  LICENSE  README.md  paper.bib  paper.md  pyproject.toml  requirements.txt  run_wavelabx_example.ipynb  setup.py  wavedata.csv
.github/workflows/: ci.yml
wavelabx/: __init__.py  analysis.py  core.py  sensitivity.py  stats.py  three_probe.py  two_probe.py
web/: README.md  app.js  index.html  spectral.js  style.css
