[project]
name = "wavelabx"
version = "0.1.0"
description = "WaveLabX: A Python toolkit for wave-probe analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.20",
  "scipy>=1.7",
  "pandas>=1.3",
  "matplotlib>=3.4",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"